// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BistateButton /> matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Leave"
  text="Joined"
/>
`;

exports[`<BistateButton /> when focuses matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Joined"
  text="Leave"
/>
`;

exports[`<BistateButton /> when focuses when blurs matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Leave"
  text="Joined"
/>
`;

exports[`<BistateButton /> when focuses when mouse leaves matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Joined"
  text="Leave"
/>
`;

exports[`<BistateButton /> when mouse enters matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Joined"
  text="Leave"
/>
`;

exports[`<BistateButton /> when mouse enters when blurs matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Joined"
  text="Leave"
/>
`;

exports[`<BistateButton /> when mouse enters when mouse leaves matches its snapshot 1`] = `
<Button
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  secondaryText="Leave"
  text="Joined"
/>
`;
